--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t abz0/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run abz0/react-test npm test -- --coverage
+  - docker run abz0/react-test npm run test -- --coverage
 
 after_success:
   - docker build -t abz0/multi-client ./client
